<resources>
    <string name="app_name">Insta</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account? Log In</string>
    <string name="do_not_have_an_account">Don\'t have an account? Sign Up</string>
    <string name="type_something_to_search">Type something to search</string>
    <string name="following">Following</string>
    <string name="follow">Follow</string>
    <string name="post">POST</string>
    <string name="description">Description</string>
    <string name="view_all_comments">View all comments</string>
    <string name="add_a_comment">Add a comment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="photo">Photo</string>
    <string name="notification">Notifications</string>
</resources>
